--- a/12 Procenty/index.html
+++ b/12 Procenty/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wyrażenie</title>
+    <title>Procent z danej liczby</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div style="text-align: center;">
-    <h1>Wyrażenie</h1>
+    <h1>Procent z danej liczby</h1>
     <h2>Autor: Kacper Zając 2ir grupa 2</h2>
     <hr>
 
-    <input type="number" id="x" placeholder="0">
+    <input type="number" id="wartosc" placeholder="x">
+    <input type="number" id="procent" placeholder="%">
 
     <button onclick="oblicz()">Oblicz</button>
-    <h2 id="wynik">Wynik: </h2>
+    <h2 id="wynik">Wynik</h2>
 </div>
-
 <script src="script.js"></script>
 </body>
 </html>
